--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           flutter-version: '3.7.7'
           channel: 'stable'
+          cache: true
       - name: Install
         run: flutter pub get
       - name: Lint
