:construction: make UI components

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.geekco.quiz.flutter_quiz">
-   <application
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
         android:label="flutter_quiz"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
