--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  http: ^0.13.5
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
