:art: add icon macOS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,10 +94,11 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   remove_alpha_ios: true
-  image_path: "images/quiz.png"
+  image_path: "./images/quiz.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   macos:
-    generate: false
+    generate: true
+    image_path: "./images/quiz_rounded.png"
   web:
     generate: false
   linux:
