--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,16 @@
+# yaml-language-server: $schema=https://static.codemagic.io/codemagic-schema.json
 workflows:
-  hello-world:
-    name: Hello world workflow
+  ci:
+    name: CI
+    instance_type: mac_mini_m1
+    max_build_duration: 15
+    environment:
+      flutter: 3.7.9
+    cache:
+      cache_paths:
+        - ~/.pub-cache
     scripts:
-      - echo "Hello World!"
+      - name: Lint
+        script: flutter analyze
+      - name: Unit tests and widget tests
+        script: flutter test
