--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,6 +13,10 @@ workflows:
     triggering:
       events:
         - push
+      branch_patterns: # Include or exclude watched branches
+        - pattern: '*'
+          include: true
+          source: true
       cancel_previous_builds: false
     scripts:
       - name: Lint
