:hammer: integrate dart code metrics

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,7 +16,9 @@ workflows:
       cancel_previous_builds: false
     scripts:
       - name: Lint
-        script: flutter analyze
+        script: |
+          flutter analyze
+          flutter pub run dart_code_metrics:metrics analyze lib --verbose
       - name: Unit tests and widget tests
         script: |
           mkdir -p test-results
